fixed header, instruction text color for bubble chart, sunburst center text color on mobile, changed breakpoints for right panel, missing border for subagency selection

--- a/_sass/C-a-U-mobile.scss
+++ b/_sass/C-a-U-mobile.scss
@@ -6,6 +6,10 @@ $cuRed: #881E3D;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+
+  .CU #section-four #investment-categories .center-heading {
+    stroke: none;
+  }
 }
 
 /* Desktop View */
